# project-swan

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Smakefile  conventions.md  idea.md  meson.build  meson_options.txt  tags  todo.md  uncrustify.cfg
core.mod/: .gitignore  CMakeLists.txt  Makefile  Smakefile  meson.build  mod.toml
core.mod/assets-src/entities/: player-idle.xcf  player-running.xcf  spider-idle.xcf
core.mod/assets-src/flora/: dead-shrub.xcf  tall-grass.xcf
core.mod/assets-src/items/: burned-food.xcf  clay.xcf  coal.xcf  cooked-potato.xcf  copper-ore-chunk.xcf  copper.xcf  door.xcf  dynamite.xcf  fiber.xcf  iron-ore-chunk.xcf  iron.xcf  pebble.xcf  pig-iron.xcf  potato.xcf  rope.xcf  sand-pile.xcf  silt-pile.xcf  snowball.xcf  stick.xcf  sulphur.xcf  unfired-crucible.xcf  wood-pole.xcf  workbench.xcf
core.mod/assets-src/masks/: drain.xcf
core.mod/assets-src/misc/: background-cave.xcf  burning-dynamite.xcf  crucible-overlay.xcf  crucible-support.xcf  heart.xcf
core.mod/assets-src/tiles/: air.xcf  aqueduct.xcf  background.xcf  bonfire.xcf  clay.xcf  computer.xcf  crucible.xcf  dirt-slab.xcf  dirt.xcf  drain.xcf  glass.xcf  grass-slab.xcf  grass.xcf  item-fan.xcf  leaves.xcf  pine-tree.xcf  platform.xcf  rope-ladder-bottom.xcf  rope-ladder-middle.xcf  sand.xcf  silt.xcf  snow.xcf  stairs.xcf  stone.xcf  tree.xcf  wood-pole.xcf  wood.xcf  workbench.xcf
core.mod/assets-src/ui/: hotbar.xcf  inventory.xcf  selected-slot.xcf
core.mod/assets/lang/: en.toml
core.mod/assets/ui/: inventory.toml
core.mod/lang/: en.toml
core.mod/proto/: core_mod.capnp
core.mod/src/: DefaultWorldGen.cc  DefaultWorldGen.h  WGDefault.cc  WGDefault.h  main.cc  mod.cc  pch.h  tiles.cc  tiles.h  tiles.x
core.mod/src/entities/: DynamiteEntity.cc  DynamiteEntity.h  EntItemStack.cc  EntItemStack.h  EntPlayer.cc  EntPlayer.h  FallingTileEntity.cc  FallingTileEntity.h  GrassSeedEntity.cc  GrassSeedEntity.h  ItemStackEntity.cc  ItemStackEntity.h  PlayerEntity.cc  PlayerEntity.h  SpiderEntity.cc  SpiderEntity.h  SpiderEntity.hh
core.mod/src/tileentities/: AqueductTileEntity.cc  AqueductTileEntity.h  BonfireTileEntity.cc  BonfireTileEntity.h  ChestTileEntity.cc  ChestTileEntity.h  ComputerTileEntity.cc  ComputerTileEntity.h  CrucibleTileEntity.cc  CrucibleTileEntity.h  DrainTileEntity.cc  DrainTileEntity.h  ItemFanTileEntity.cc  ItemFanTileEntity.h  ItemPipeTileEntity.cc  ItemPipeTileEntity.h
core.mod/src/util/: CraftingInventory.cc  CraftingInventory.h
core.mod/src/world/: aqueduct.cc  aqueduct.h  bonfire.cc  bonfire.h  chest.cc  chest.h  clay.cc  clay.h  computer.cc  computer.h  crucible.cc  crucible.h  door.cc  door.h  drain.cc  drain.h  item-fan.cc  item-fan.h  ladder.cc  ladder.h  outcrop.cc  outcrop.h  pipe.cc  pipe.h  platform.cc  platform.h  potato.cc  potato.h  seeds.cc  seeds.h  stairs.cc  stairs.h  terrain.cc  terrain.h  torch.cc  torch.h  tree.cc  tree.h  util.cc  util.h  (+2 more)
core.mod/src/worldgen/: Biome.h  OreDef.cc  OreDef.h  Prefab.cc  Prefab.h  ShrubberyDef.cc  ShrubberyDef.h  StructureDef.cc  StructureDef.h  TallGrassDef.cc  TallGrassDef.h  TreeDef.cc  TreeDef.h  WGContext.h  WorldArea.cc  WorldArea.h  wgutil.h
launcher/: meson.build
launcher/src/: MainWindow.cc  MainWindow.h  SwanLauncher.cc  SwanLauncher.h  main.cc  stylesheet.h  system.cc  system.h  worlds.cc  worlds.h
libcygnet/: CMakeLists.txt  meson.build
libcygnet/include/cygnet/: BuiltinShaders.h  Context.h  GlProgram.h  GlWrappers.h  Gui.h  Image.h  Program.h  RenderQueue.h  Renderer.h  ResourceManager.h  TextCache.h  TileAtlas.h  Window.h  builtins.h  gl.h  glutil.h  shaders.h  util.h
libcygnet/samples/game/: game.cc
libcygnet/samples/hello-texture/: hello-texture.cc
libcygnet/samples/hello-triangle/: hello-triangle.cc
libcygnet/src/: BuiltinShaders.cc  Context.cc  GlProgram.cc  GlWrappers.cc  Gui.cc  Image.cc  Program.cc  RenderQueue.cc  Renderer.cc  ResourceManager.cc  TextCache.cc  TileAtlas.cc  Window.cc  builtins.cc  gl.cc  gl.h  glutil.cc  shaders.cc  util.cc
libcygnet/src/glsl/: AlphaBlend.glsl  AlphaBlend.h  Blend.glsl  Blend.h  Chunk.glsl  Chunk.h  ChunkFluid.glsl  ChunkFluid.h  ChunkShadow.glsl  ChunkShadow.h  GammaBlend.glsl  GammaBlend.h  Mask.glsl  Mask.h  Particle.glsl  Particle.h  Rect.glsl  Rect.h  Sprite.glsl  Sprite.h  Text.glsl  Text.h  Tile.glsl  Tile.h  TileClip.glsl  TileClip.h
libcygnet/src/shaders/: basic.cc
libswan/: CMakeLists.txt  Makefile  Smakefile  meson.build
libswan/include/swan/: Action.h  Animation.h  Asset.h  Automata.h  Body.h  BoundingBox.h  Chunk.h  Clock.h  Collection.h  Command.h  Direction.h  DirectionSet.h  Entity.h  EntityCollection.h  EntityCollectionImpl.h  EntityUtil.h  EventEmitter.h  FastHashSet.h  Fluid.h  FrameRecorder.h  Game.h  InputHandler.h  Item.h  ItemStack.h  LightServer.h  LightingThread.h  Mod.h  ModImpl.h  OS.h  PerfCounter.h  Player.h  Recipe.h  Resource.h  RingBuffer.h  SRF.h  SlotVector.h  SmallOptional.h  SoundPlayer.h  Tile.h  TileMap.h  (+16 more)
libswan/proto/: swan.capnp
libswan/src/: Animation.cc  Asset.cc  Automata.cc  Body.cc  Chunk.cc  Clock.cc  Command.cc  Entity.cc  EntityCollection.cc  FrameRecorder.cc  Game.cc  InputHandler.cc  Item.cc  ItemStack.cc  LightServer.cc  LightingThread.cc  Mod.cc  OS.cc  PerfCounter.cc  Player.cc  Resource.cc  SRF.cc  SoundPlayer.cc  Tile.cc  Timer.cc  World.cc  WorldPlane.cc  assets.cc  drawutil.cc  gfxutil.cc  keymap.x.h  rle.cc  uiutil.cc  util.cc
libswan/src/inputmaps/: axes.cc  axes.x  buttons.cc  buttons.x  keys.cc  keys.x  mouse.cc  mouse.x
libswan/src/systems/: EntitySystem.cc  FluidSystem.cc  LightSystem.cc  TileSystem.cc
libswan/src/traits/: BodyTrait.cc  (+3 more)
libswan/test/: Animation.t.cc  Body.t.cc  BoundingBox.t.cc  Clock.t.cc  Entity.t.cc  Game.t.cc  Item.t.cc  ItemStack.t.cc  Mod.t.cc  OS.t.cc  PerfCounter.t.cc  Resource.t.cc  SRF.t.cc  Tile.t.cc  Timer.t.cc  Vector2.t.cc  Win.t.cc  World.t.cc  WorldGen.t.cc  WorldPlane.t.cc  common.t.cc  gfxutil.t.cc  log.t.cc  rle.t.cc  swan.t.cc  util.t.cc
tracy-tools/: CMakeLists.txt
(+191 files in other folders)
